update text. (test commit)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <i><p>Student of <Strong>RMIT Vietnam</Strong></p></i>
         <p>Interested in working with data 💻</p>
         <p>An avid rhythm game enjoyer🎵</p>
+        <p>Portable coding device enthusiast</p>
 
     <h2>Hobbies</h2>
         <ul>
